--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,4 +79,19 @@ body,
   body {
     @apply bg-background text-foreground;
   }
+  textarea {
+    resize: none;
+  }
+}
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
